--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ APP_SECRET=6578d4aafa61f448e057dfa9c79278ab
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 
-DATABASE_URL="mysql://root:@127.0.0.1:3306/dette_boutique_symfony?serverVersion=8.3.12&charset=utf8"
-# DATABASE_URL="postgresql://postgres:Chelsea37@127.0.0.1:5111/dette_boutique_symfony?serverVersion=16.4&charset=utf8"
+# DATABASE_URL="mysql://root:@127.0.0.1:3306/dette_boutique_symfony?serverVersion=8.3.12&charset=utf8"
+DATABASE_URL="postgresql://postgres:1111@127.0.0.1:5432/dette_boutique_symfony?serverVersion=16.4&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
 
